--- a/style.css
+++ b/style.css
@@ -28,3 +28,59 @@ header {
     box-shadow: 0 3px 10px;
     text-shadow: 0px 0px 10px;
 }
+
+form,
+.player-setup,
+.symbols {
+    display: flex;
+}
+
+form {
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    margin-top: 50px;
+}
+
+.player-setup {
+    align-items: center;
+    gap: 30px;
+}
+
+.symbols {
+    gap: 10px;
+}
+
+.player-name {
+    font-size: 1rem;
+    width: 200px;
+    padding: 7px;
+    border: 1px solid #fff;
+    background-color: transparent;
+    border-radius: 5px;
+}
+
+.symbol input {
+    visibility: hidden;
+    position: absolute;
+}
+
+.symbol label {
+    background-color: var(--primary-color);
+    border: 1px solid #000;
+    padding: 8px 40px;
+    border-radius: 5px;
+}
+
+.submit {
+    font-size: 1rem;
+    background-color: var(--primary-color);
+    border: 1px solid #000;
+    padding: 8px 20px;
+    border-radius: 5px;
+}
+
+button,
+label {
+    cursor: pointer;
+}
