--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ form {
     align-items: center;
     gap: 30px;
     margin-top: 50px;
+    display: none;
 }
 
 .player-setup {
@@ -83,4 +84,35 @@ form {
 button,
 label {
     cursor: pointer;
+}
+
+.game {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 50px;
+}
+
+.scoreboard {
+    font-size: 1.6rem;
+    background-color: var(--primary-color);
+    padding: 10px 30px;
+    width: 270px;
+    height: 300px;
+    box-shadow: 0 0 10px 0px;
+    border-radius: 15px;
+}
+
+.scoreboard .name {
+    text-align: center;
+    margin-bottom: 70px;
+}
+
+.scoreboard-body {
+    width: 60%;
+}
+
+.scoreboard-row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
 }
