--- a/style.css
+++ b/style.css
@@ -116,3 +116,20 @@ label {
     justify-content: space-between;
     margin-bottom: 20px;
 }
+
+.gameboard {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 430px;
+    aspect-ratio: 1;
+    cursor: pointer;
+    box-shadow: 0 0 0 1px #00ffff99;
+}
+
+.tile {
+    box-shadow: inset 0 0 1px 1px #00ffff99;
+}
+
+.tile:hover {
+    box-shadow: inset 0 0 1px 2px #00ffff99;
+}
