--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header {
     background-color: #232422;
     text-align: center;
     padding: 20px;
-    margin-bottom: 1em;
+    margin-bottom: 50px;
     box-shadow: 0 3px 10px;
     text-shadow: 0px 0px 10px;
 }
@@ -39,7 +39,6 @@ form {
     flex-direction: column;
     align-items: center;
     gap: 30px;
-    margin-top: 50px;
     display: none;
 }
 
@@ -89,7 +88,6 @@ label {
 .game {
     display: flex;
     justify-content: space-around;
-    margin-top: 50px;
 }
 
 .scoreboard {
@@ -132,4 +130,18 @@ label {
 
 .tile:hover {
     box-shadow: inset 0 0 1px 2px #00ffff99;
+}
+
+.restart {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.restart button {
+    font-size: 1.1rem;
+    background-color: var(--primary-color);
+    padding: 10px 20px;
+    border: 1px solid #000;
+    border-radius: 5px;
+    box-shadow: 1px 1px #000;
 }
