--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ label {
 
 .gameboard {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
     width: 430px;
     aspect-ratio: 1;
     cursor: pointer;
@@ -134,6 +134,9 @@ label {
 
 .tile {
     box-shadow: inset 0 0 1px 1px #00ffff99;
+    display: grid;
+    place-items: center;
+    font-size: 5rem;
 }
 
 .tile:hover {
@@ -156,4 +159,8 @@ label {
 
 .hide {
     display: none;
+}
+
+button:hover {
+    background-color: var(--secondary-color);
 }
