--- a/style.css
+++ b/style.css
@@ -164,3 +164,19 @@ label {
 button:hover {
     background-color: var(--secondary-color);
 }
+
+.turning {
+    animation: scale 1.3s infinite ease-in;
+}
+
+@keyframes scale {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.02);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
